--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <p>moira jumping animation</p>
                         </div>
                     </div>
-                </div>               
+                </div>
                 <div class="portfolio-item" data-category="animations">
                     <div class="portfolio-image">
                         <img src="assets/images/animations/obstacles_animation.gif" alt="Level 1 Obstacles Animation">
@@ -165,9 +165,36 @@
                         </div>
                     </div>
                 </div>
+                <div class="portfolio-item" data-category="animations">
+                    <div class="portfolio-image">
+                        <img src="assets/images/animations/planet_earth.gif" alt="Planet Earth Roll Animation">
+                        <div class="portfolio-overlay">
+                            <h3>PhysiCat</h3>
+                            <p>planet earth roll animation</p>
+                        </div>
+                    </div>
+                </div> 
+                <div class="portfolio-item" data-category="animations">
+                    <div class="portfolio-image">
+                        <img src="assets/images/animations/moira_scooter_animation.gif" alt="Moira Scooter Animation">
+                        <div class="portfolio-overlay">
+                            <h3>PhysiCat</h3>
+                            <p>moira scooter animation</p>
+                        </div>
+                    </div>
+                </div>                     
+                <div class="portfolio-item" data-category="animations">
+                    <div class="portfolio-image">
+                        <img src="assets/images/animations/scooter_panel.gif" alt="Scooter Panel Animation">
+                        <div class="portfolio-overlay">
+                            <h3>PhysiCat</h3>
+                            <p>scooter panel animation</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="portfolio-item item-large" ata-category="environments">
                     <div class="portfolio-image">
-                        <img src="assets/images/environments/background_level1_physicat.png" alt="PhysiCat Level 1 Background">
+                        <img src="assets/images/environments/background_level1.png" alt="PhysiCat Level 1 Background">
                         <div class="portfolio-overlay">
                             <h3>PhysiCat</h3>
                             <p>level 1 background</p>
@@ -176,28 +203,28 @@
                 </div>
                 <div class="portfolio-item item-large" data-category="environments">
                     <div class="portfolio-image">
-                        <img src="assets/images/environments/background_level2_physicat.png" alt="PhysiCat Level 2 Background">
+                        <img src="assets/images/environments/background_level2.png" alt="PhysiCat Level 2 Background">
                         <div class="portfolio-overlay">
                             <h3>PhysiCat</h3>
                             <p>level 2 background</p>
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item" data-category="spritesheets">
+                <div class="portfolio-item item-large" data-category="environments">
                     <div class="portfolio-image">
-                        <img src="assets/images/spritesheets/spaghetti_sheet.png" alt="Spaghetti Sprite Sheet">
+                        <img src="assets/images/environments/background_level3.png" alt="PhysiCat Level 3 Background">
                         <div class="portfolio-overlay">
                             <h3>PhysiCat</h3>
-                            <p>spaghetti spritesheet</p>
+                            <p>level 3 background</p>
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item" data-category="spritesheets">
                     <div class="portfolio-image">
-                        <img src="assets/images/spritesheets/obstacles_level1_spritesheet.png" alt="Level 1 Obstacles Spritesheet">
+                        <img src="assets/images/spritesheets/obstacles_level1_spritesheet.png" alt="Level 1 Spritesheet">
                         <div class="portfolio-overlay">
                             <h3>PhysiCat</h3>
-                            <p>level 1 obstacles spritesheet</p>
+                            <p>level 1 spritesheet</p>
                         </div>
                     </div>
                 </div>
