--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                 </div> 
                 <div class="portfolio-item" data-category="animations">
                     <div class="portfolio-image">
-                        <img src="assets/images/animations/moira_scooter_animation.gif" alt="Moira Scooter Animation">
+                        <img src="assets/images/animations/moira_scooter_animation.gif" alt="Moira's Scooter Animation">
                         <div class="portfolio-overlay">
                             <h3>PhysiCat</h3>
-                            <p>moira scooter animation</p>
+                            <p>moira's scooter animation</p>
                         </div>
                     </div>
                 </div>                     
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item item-large" ata-category="environments">
+                <div class="portfolio-item item-large" data-category="environments">
                     <div class="portfolio-image">
                         <img src="assets/images/environments/background_level1.png" alt="PhysiCat Level 1 Background">
                         <div class="portfolio-overlay">
@@ -263,7 +263,16 @@
                             <p>black hole background animation</p>
                         </div>
                     </div>
-                </div>        
+                </div>
+                <div class="portfolio-item" data-category="spritesheets">
+                    <div class="portfolio-image">
+                        <img src="assets/images/spritesheets/moira_scooter_spritesheet.png" alt="Moira Scooter Spritesheet">
+                        <div class="portfolio-overlay">
+                            <h3>PhysiCat</h3>
+                            <p>moira's scooter spritesheet</p>
+                        </div>
+                    </div>
+                </div>  
             </div>
         </div>
     </section>
